# Grainbin_ctrl_system

./: .gitignore  README.md  开发计划书.md  文件表格内容汇总.md
.claude/: settings.local.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260703_v2_1_payments.py  20260703_v2_initial.py  20260706_v2_2_business_phase1.py  20260706_v2_2_field_mappings.py
backend/app/: main.py  seed_data.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  ai_task.py  audit_log.py  base.py  contract.py  contract_payment.py  data_row.py  dict_tables.py  ingest.py  knowledge.py  monthly_fund.py  node_template.py  payment_audit.py  progress_review.py  project.py  report.py  secondary_cost.py  user.py  weekly_progress.py
backend/app/routers/: api.py  auth.py  batch.py  contracts.py  dicts.py  ingest.py  mapping.py  projects.py  reviews.py  upload.py  users.py
backend/app/schemas/: api_response.py  common.py  contract.py  dict_item.py  ingest.py  mapping.py  project.py  review.py  upload.py  user.py
backend/app/services/: batch_service.py  contract.py  dict_service.py  ingest.py  mapping.py  parser.py  project.py  review.py  upload.py  user.py
backend/app/tasks/: celery_app.py  ingest_worker.py
backend/app/utils/: converter.py  db.py  minio_client.py  pagination.py  redis_client.py  validator.py
backend/tests/: conftest.py  test_auth.py  test_core_pipeline.py  test_db_utils.py  test_ingest_pipeline.py  test_parser.py  test_permissions.py  test_real_data.py
(+80 files in other folders)
