[project]
name = "grainbin-backend"
version = "0.1.0"
description = "粮仓项目全过程控制（过控）智能管理系统 - 后端"
authors = [{ name = "Grainbin Team" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "minio>=7.2.0",
    "pgvector>=0.3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
